[workspace]
resolver = "2"
members = [
    "crates/chain",
    "crates/file_store",
    "crates/sqlite",
    "crates/electrum",
    "crates/esplora",
    "crates/bitcoind_rpc",
    "crates/persist",
    "crates/testenv",
    "crates/wallet",
    "example-crates/example_cli",
    "example-crates/example_electrum",
    "example-crates/example_esplora",
    "example-crates/example_bitcoind_rpc_polling",
]

[workspace.package]
authors = ["Bitcoin Dev Kit Developers"]
