[package]
name = "bdk_chain"
version = "0.15.0"
edition = "2021"
rust-version = "1.63"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
documentation = "https://docs.rs/bdk_chain"
description = "Collection of core structures for Bitcoin Dev Kit."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For no-std, remember to enable the bitcoin/no-std feature
tapyrus = { git = "https://github.com/chaintope/rust-tapyrus", branch = "update_on_bitcoin_0.31.x", default-features = false, subdirectory = "tapyrus" }
serde_crate = { package = "serde", version = "1", optional = true, features = ["derive", "rc"] }

# Use hashbrown as a feature flag to have HashSet and HashMap from it.
hashbrown = { version = "0.9.1", optional = true, features = ["serde"] }
miniscript = { git = "https://github.com/chaintope/rust-miniscript", branch = "master", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8"
proptest = "1.2.0"

[features]
default = ["std", "miniscript"]
std = ["tapyrus/std", "miniscript?/std"]
serde = ["serde_crate", "tapyrus/serde", "miniscript?/serde"]
