[package]
name = "tdk_electrum"
version = "0.14.0"
edition = "2021"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
documentation = "https://docs.rs/tdk_electrum"
description = "Fetch data from electrum in the form BDK accepts"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tdk_chain = { path = "../chain", version = "0.15.0" }
electrum-client = { git = "https://github.com/chaintope/rust-electrum-client", branch = "work_on_tapyrus" }
#rustls = { version = "=0.21.1", optional = true, features = ["dangerous_configuration"] }

[dev-dependencies]
tdk_testenv = { path = "../testenv", default-features = false }