[package]
name = "bdk_testenv"
version = "0.5.0"
edition = "2021"
rust-version = "1.63"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
documentation = "https://docs.rs/bdk_testenv"
description = "Testing framework for BDK chain sources."
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tdk_chain = { path = "../chain", version = "0.15", default-features = false }
electrsd = { git = "https://github.com/chaintope/electrsd" , branch="use_rust_tapyrus", features = ["legacy", "electrs_0_5_1", "tapyrusd_0_5_2"] }

[features]
default = ["std"]
std = ["tdk_chain/std"]
serde = ["tdk_chain/serde"]
