[package]
name = "wallet_esplora_async"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tdk_wallet = { path = "../../crates/wallet" }
tdk_esplora = { path = "../../crates/esplora", features = ["async-https"] }
tdk_sqlite = { path = "../../crates/sqlite" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1"
